# ros_seminar

./: .gitmodules  .travis.yml  20160206.rst  README.md  rosseminar.rosinstall
image_processing/my_image_processing/: CMakeLists.txt  package.xml
image_processing/my_image_processing/launch/: aruco_single.launch  camera.launch  uvc_camera.launch
ros_seminar_basic/: README.md
ros_seminar_basic/my_moveit_sample/: CHANGELOG.rst  CMakeLists.txt  package.xml  temp_move.py
ros_seminar_basic/my_moveit_sample/test/: test_moveit_sample.test
ros_seminar_basic/my_onedof_control/: CHANGELOG.rst  CMakeLists.txt  dynamixel_parms.yaml  leap2dynamixel.py  package.xml
ros_seminar_basic/my_onedof_control/launch/: controller_manager.launch  start_controllers.launch
ros_seminar_basic/my_onedof_control/test/: test_leap_motion_sender.test
ros_seminar_manipulation/: README.md
ros_seminar_manipulation/stackit_robot/: 99-uvc.rules  CHANGELOG.rst  CMakeLists.txt  cam.yaml  camera_node.launch  controller_manager.launch  dynamixel_all.launch  dynamixel_moveit.launch  dynamixel_parms.yaml  dynamixel_separate.launch  marker_all_app.launch  marker_demo.py  marker_demo_all.launch  marker_detect.launch  move_arm.py  move_arm2.py  move_arm3.py  package.xml  setup.py  stackit_demo.launch  stackit_robot_joint_state_publisher.py  start_controllers.launch  temp.launch  tf_listener.py  tf_listerner.py
ros_seminar_manipulation/stackit_robot/src/stackit_robot/: joint_trajectory_action_controller.py
ros_seminar_manipulation/stackit_robot/test/: test_calibration.test
ros_seminar_manipulation/stackit_robot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  temp.launch
ros_seminar_manipulation/stackit_robot_description/meshes/: AX-12A.stl  AX-12A.stp  FP04-F2.stl  FP04-F2.stp  FP04-F3.stl  FP04-F3.stp  FP04-F4.stl  FP04-F4.stp
ros_seminar_manipulation/stackit_robot_description/urdf/: arm_hardware.xacro  my_four_dof_arm.urdf  my_four_dof_arm.xacro
ros_seminar_manipulation/stackit_robot_ikfast_whole_arm_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  stackit_robot_whole_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
ros_seminar_manipulation/stackit_robot_ikfast_whole_arm_plugin/src/: stackit_robot_whole_arm_ikfast_moveit_plugin.cpp  stackit_robot_whole_arm_ikfast_solver.cpp
ros_seminar_manipulation/stackit_robot_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
ros_seminar_manipulation/stackit_robot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics.yaml.kdl  ompl_planning.yaml  stackit_robot.srdf
ros_seminar_manipulation/stackit_robot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml.default  ompl_planning_pipeline.launch.xml.trajfilter  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stackit_robot_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
ros_seminar_navigation/: README.md  workshop_navigation.txt
ros_seminar_navigation/my_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml  send_goal_actionlib.py  send_goal_message.py  send_vel_with_test.py
ros_seminar_navigation/my_navigation/launch/: recognizer.launch  voice_cmd.dic
ros_seminar_navigation/my_navigation/script/: send_goal_action.py  send_goal_message.py  send_vel_with_keyboard.py  send_vel_with_text.py  send_vel_with_voice.py
rosseminar_hironxo/hironx_tutorial/: CHANGELOG.rst  package.xml
rosseminar_hironxo/hironx_tutorial/script/: exercise_sol_sample.py  exercise_yours.py  moveit_robo_agnostic.py
