<?xml version="1.0"?>
<package>
  <name>my_moveit_sample</name>
  <version>1.0.2</version>
  <description>The my_moveit_sample package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author>Wataru Yasuda</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>