<?xml version="1.0"?>
<package>
  <name>my_moveit_sample</name>
  <version>1.1.0</version>
  <description>The my_moveit_sample package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author>Wataru Yasuda</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>denso_launch</run_depend>
  <run_depend>vs060</run_depend>
  <run_depend>vs060_moveit_config</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_self_filter</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
