<?xml version="1.0"?>
<package>
  <name>stackit_robot</name>
  <version>1.0.3</version>
  <description>The stackit_robot package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author>Wataru Yasuda</author>

  <license>GPL</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>libuvc_camera</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>camera_calibration</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>stackit_robot_moveit_config</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
